--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,13 @@
-@use "variables";
+@use 'global/reset';
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: variables.$accent-primary;
-    color: variables.$text-primary;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+  // Helpers
+    @use 'global/variables';
+    @use 'mixins/mixins';
+    @use 'global/fonts';
 
-h1 {
-    font-size: variables.$h1-font-size;
-}
+  // Blocks
+    @use 'blocks/auto-card';
+    @use 'blocks/container';
+    @use 'blocks/modal';
+    @use 'blocks/btn';
+    @use 'blocks/layout';
