--- a/src/styles/blocks/_modal.scss
+++ b/src/styles/blocks/_modal.scss
@@ -28,7 +28,7 @@ $transition-speed: 300ms;
     // Dimensions
     --modal-width: 475px;
     --modal-max-width: var(--modal-width);
-    --modal-border-radius: 24px;
+    --modal-border-radius: 12px;
     --modal-content-width: auto;
 
     position: fixed;
@@ -94,11 +94,13 @@ $transition-speed: 300ms;
     &__suggest {
         color: var(--modal-secondary-text-color);
         text-align: center;
-        padding-bottom: 40px;
+        padding-bottom: 52px;
         @include font.font(16px, 20px, 500);
 
         @media (min-width: 992px) {
             @include font.font(14px, 20px);
+            letter-spacing: 0.5px;
+            padding-bottom: 40px;
         }
     }
     &__header {
@@ -172,12 +174,14 @@ $transition-speed: 300ms;
     }
 
     &__logo-img {
-        width: 130px;
-        height: 200px;
+        width: 155px;
+        height: 171px;
+        margin-bottom: 26px;
 
         @media (min-width: 992px) {
-        width: 170px;
-        height: 234px;
+        width: 193px;
+        height: 211px;
+        margin-bottom: 32px;
         }
     }
 
@@ -193,7 +197,7 @@ $transition-speed: 300ms;
 
     &__text {
         color: var(--modal-text-color);
-        margin-bottom: 24px;
+        margin-bottom: 16px;
         @include font.font(24px, 32px, 600);
     }
 }
